# CryoLang

./: .gitignore  NEW_README.md  README.md  TODO.md  another_example.c  another_example.h  build_output.txt  build_tail.txt  cryo_debug_ir.ll.tmp  cryo_errors.txt  cryo_interpreter.cryo  example  example.asm  example.c  example.cryo  example.h  global_test.cryo  http_server.cryo  http_server_2.cryo  http_server_linux.cryo  install.ps1  install.sh  llvm.sh  makefile  makefile.config  runtime_backup.cryo  runtime_output.txt  static_call_test.cryo  string_test.cryo  test.cryo  test.makefile.config  test_all_types.cryo  test_array.cryo  test_edge_cases.cryo  test_executable  test_executable.cryo  test_generic_class.cryo  test_int_conversion.cryo  test_ir_executable  test_memory.cryo  (+9 more)
tools/CryoFormat/: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPER.md  LICENSE  Makefile  README.md  build.bat  build.sh  cryofmt.toml  debug_out.txt  demo.sh  test_build.sh  test_elseif.cryo  test_output.txt
tools/CryoFormat/.github/workflows/: ci.yml
tools/CryoFormat/benches/: formatting_bench.rs
tools/CryoFormat/examples/: after_formatting.cryo  before_formatting.cryo
tools/CryoFormat/src/: config.rs  error.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  profiler.rs  token.rs
tools/CryoFormat/tests/: integration_tests.rs
tools/CryoFormat/tests/fixtures/: functions_formatted.cryo  functions_unformatted.cryo  structs_formatted.cryo  structs_unformatted.cryo  variables_formatted.cryo  variables_unformatted.cryo
tools/CryoLSP/: CMakeLists.txt  README.md  makefile  test_stdio.cpp
tools/CryoLSP/include/: CompletionProvider.hpp  DiagnosticsProvider.hpp  DocumentManager.hpp  HoverProvider.hpp  JsonParser.hpp  JsonUtils.hpp  LSPAnalyzer.hpp  LSPLogger.hpp  LSPMessage.hpp  LSPProtocol.hpp  LSPServer.hpp  LSPServer_simple.hpp  LSPTypes.hpp  LanguageServer.hpp  Logger.hpp  MessageHandler.hpp  ProtocolHandler.hpp  Server.hpp  SymbolProvider.hpp  TcpTransport.hpp  Transport.hpp
tools/CryoLSP/include/LSP/: ASTSearchHelpers.hpp  AnalysisEngine.hpp  DocumentStore.hpp  PositionFinder.hpp  Protocol.hpp  Server.hpp  Transport.hpp
tools/CryoLSP/include/LSP/Providers/: CompletionProvider.hpp  DefinitionProvider.hpp  DiagnosticsProvider.hpp  HoverProvider.hpp  ImplBlockCollector.hpp  (+4 more)
tools/CryoLSP/include/analyzer/: CryoAnalyzer.hpp  CryoAnalyzer_old.hpp
tools/CryoLSP/include/protocol/: LSPMessage.hpp  ProtocolHandler.hpp
tools/CryoLSP/include/server/: LanguageServer.hpp
tools/CryoLSP/src/: ASTSearchHelpers.cpp  AnalysisEngine.cpp  CompletionProvider.cpp  DiagnosticsProvider.cpp  DocumentManager.cpp  DocumentStore.cpp  HoverProvider.cpp  JsonUtils.cpp  LSPAnalyzer.cpp  LSPHandlers.cpp  LSPLogger.cpp  LSPServer.cpp  MessageHandler.cpp  PositionFinder.cpp  Protocol.cpp  Server.cpp  ServerHelpers.cpp  SymbolProvider.cpp  Transport.cpp  main.cpp
tools/CryoLSP/src/Providers/: CompletionProvider.cpp  DefinitionProvider.cpp  DiagnosticsProvider.cpp  HoverProvider.cpp  ReferencesProvider.cpp  SemanticTokensProvider.cpp  SignatureHelpProvider.cpp  SymbolProvider.cpp
tools/CryoLSP/src/analyzer/: CryoAnalyzer.cpp
tools/CryoLSP/src/protocol/: LSPMessage.cpp  ProtocolHandler.cpp
tools/CryoLSP/src/server/: DocumentManager.cpp  LanguageServer.cpp
tools/CryoLSP/src/transport/: Transport.cpp
tools/CryoLSP/src/utils/: JsonParser.cpp  Logger.cpp
(+1416 files in other folders)
