[package]
name = "cryofmt"
version = "0.1.0"
edition = "2021"
authors = ["CryoLang Development Team"]
description = "A code formatter for the CryoLang programming language"
license = "MIT"
homepage = "https://github.com/jakelequire/CryoLang"
repository = "https://github.com/jakelequire/CryoLang"
keywords = ["formatter", "cryolang", "code-formatter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cryofmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
unicode-width = "0.1"
termcolor = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "formatting_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true